--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.port=8080
 
 # ???????????? ??????????? ?????
 spring.mail.host=smtp.gmail.com
-spring.mail.username=maksym.petliuk@gmail.com
+spring.mail.username=**********************
 spring.mail.password=**********************
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
